--- a/webservers.yaml
+++ b/webservers.yaml
@@ -2,7 +2,14 @@
 - hosts: all
   become: yes
   tasks:
+  - name:
+    ping:
+
   - name : i want to install apache2 webserver on all my hosts
     apt:
       name: apache2
       state: present
+  - name: i want to start my webserver
+    service:
+      name: apache2
+      state: started
