--- a/webserverUR.yaml
+++ b/webserverUR.yaml
@@ -6,9 +6,21 @@
     apt:
       name: apache2
       state: present
-    when: ansible_os_family="Debian"
+    when: ansible_os_family =="Debian"
+  - name: start apache2 service on ubuntu
+    service:
+      name: apache2
+      state: started
+    when:  ansible_os_family =="Debian"
+
+
   - name: install httpd webserver on redhat
     yum:
       name: httpd
       state: present
-    when: ansible_os_family="RedHat"
+    when: ansible_os_family =="RedHat"
+  - name: start httpd service on redhat
+    service:
+      name: httpd
+      start: started
+    when: ansible_os_family =="RedHat"
