--- a/myfilehandlers.yaml
+++ b/myfilehandlers.yaml
@@ -3,3 +3,13 @@
   become: yes
   tasks:
   - include_tasks: myfile.yaml
+
+  - name: insall apache2 on ubuntu slave
+    apt:
+      name: apache2
+      state: present
+
+  - name: start apache2 service on ubuntu node
+    service:
+      name: apache2
+      state: restarted
