installing and starting apche2 service with index.j2

--- a/myfilehandlers.yaml
+++ b/myfilehandlers.yaml
@@ -13,3 +13,8 @@
     service:
       name: apache2
       state: restarted
+
+  - name: coping file index.j2 to ansible ubuntu slave
+    template:
+      src: index.j2
+      dest: /var/www/html/index.html
