installing and starting apche2 service with index.j2 dynamic content

--- a/myfilehandlers.yaml
+++ b/myfilehandlers.yaml
@@ -18,3 +18,8 @@
     template:
       src: index.j2
       dest: /var/www/html/index.html
+
+  - name: start apache2 service on ubuntu node
+    service:
+      name: apache2
+      state: restarted
