--- a/mytomcatsetup.yaml
+++ b/mytomcatsetup.yaml
@@ -2,4 +2,4 @@
 - hosts: appserver
   become: yes
   roles:
-    - { role: tomcat8onubuntu, when: ansible_os_family== "Debian" }
+    - { role: mytomcat8onubntu16, when: ansible_os_family== "Debian" }
