--- a/mytomcat8onubntu16/tasks/extracttarfile.yaml
+++ b/mytomcat8onubntu16/tasks/extracttarfile.yaml
@@ -3,7 +3,7 @@
   file:
     path:  /opt/tomcat
     state: directory
-    mode: 0755
+    mode: '0755'
 - name: extract tar file
   command:
     cmd: tar xzvf /home/ubuntu/apache-tomcat-8*tar.gz -C /opt/tomcat --strip-components=1
