--- a/mytomcat8onubntu16/tasks/extracttarfile.yaml
+++ b/mytomcat8onubntu16/tasks/extracttarfile.yaml
@@ -6,5 +6,5 @@
     mode: '0755'
 - name: extract tar file
   command:
-    cmd: tar xzvf /home/ubuntu/apache-tomcat-8*tar.gz -C /opt/tomcat --strip-components=1
+    cmd: tar xzvf  /home/ubuntu/apache-tomcat-8.5.5.tar.gz -C /opt/tomcat --strip-components=1
     creates: /opt/tomcat/LICENSE
