--- a/mytomcat8onubntu16/tasks/main.yml
+++ b/mytomcat8onubntu16/tasks/main.yml
@@ -10,3 +10,5 @@
 - include_tasks: tomcatstart.yaml
 - include_tasks: tomcatguiuser.yaml
 - include_tasks: restarttomcatservice.yaml
+- include_tasks: deployjavaapp.yaml
+- include_tasks: restarttomcatservice.yaml
